# bgt-automate

./: README.md  bg-products.json  config for jeremy.php  dp2 product reference.json  pyproject.toml
Automation POM/: api_call.py  dir_location.py  driver_setup.py  locators.py  loggin_config.json  main.py  tests.py
Automation POM/Infigo_Automation.egg-info/: PKG-INFO  SOURCES.txt
Automation POM/Pages/: baseproduct.py  variants.py
Create_product/: credentials.py  designer.toml  dir_location.py  driver_setup.py  file_handler.py  locators.py  loggin_config.json  main.py  main.spec  pyproject.toml  setup.py
Create_product/Create_Products.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Create_product/Pages/: baseproduct.py  login.py  variants.py
Infigo_Automation.egg-info/: requires.txt
Update_product/: loggin_config.json  main.py  pyproject.toml  setup.py
Update_product/Call API/: bgt_api.py  parse_smartsheet.py
Update_product/Config/: .toml  pyproject.toml  setup.py
Update_product/GUI/: first_gui.py  style.qss  styling.py  styling.spec
Update_product/Pages/: Variants.py  login.py
Update_product/Update_Products.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Update_product/env/: pyvenv.cfg
Update_product/env/Scripts/: activate  activate.bat
_old version/: automate infigo.py
_old version/Legacy/: ProductsToAdd.json  bg-prod redo.json
